// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Visualize at: https://dbdiagram.io
//
// Source of truth is schema.prisma — this file is kept in sync for visualization.
//
// Relationship settings and names are not supported for inline form reference.
// Use standalone refs for cascade/nullify behaviour:
//  `Ref: a.id - b.id [delete: cascade, update: no action]`
//
// PK rule of thumb:
//   CUID  — anything that appears in a URL, JWT, or API response
//   integer (autoincrement) — internal/junction tables, never exposed

/*

High Level Model Overview
-------------------------
Hub -> Community -> User

User -> Subscriptions / UserEvents

User + Community -> Role -> Permissions

Community -> Event / Announcement -> Comment

Community -> *job_queue* -> User  (via scheduler + executioner)

Auth: User -> Session (refresh token store)

*/


// -------------------------------------------------------
// Users & Auth
// -------------------------------------------------------

Table user {
  id cuid [pk]
  username varchar [unique, not null]
  email varchar [unique, not null]
  phone varchar

  email_verified_at timestamp
  phone_verified_at timestamp

  firstname varchar
  lastname varchar

  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  lastlogin_at timestamp

  settings jsonb

  // In-house auth
  password_hash varchar
  email_verification_token varchar [unique]

  indexes {
    email
    username
    lastlogin_at [name: 'lastlogin_index']
  }
}

Table sessions {
  id cuid [pk]
  user_id cuid [not null]
  refresh_token varchar [unique, not null, note: 'SHA-256 hash of the raw refresh JWT']
  expires_at timestamp [not null]
  created_at timestamp [default: `now()`]

  indexes {
    user_id
  }
}

Ref: sessions.user_id > user.id [delete: cascade]


// -------------------------------------------------------
// Role Based Access Controls
// -------------------------------------------------------
// Polymorphic many-to-many: each role is scoped to a specific entity
// (community or hub). Stewards can define custom roles beyond defaults.

Table user_role {
  user_id cuid [not null]
  entity_type RoleEntityType [not null]
  entity_id cuid [not null, note: 'No FK — polymorphic ref to hub.id or community.id']
  role_id integer [not null]

  indexes {
    (user_id, entity_id) [pk, unique, note: 'One role per entity per user']
    (entity_type, entity_id) [name: 'idx_user_role_entity']
  }

  checks {
    `entity_type IN ('HUB', 'COMMUNITY')` [name: 'chk_valid_user_role_entity_type']
  }
}

Enum RoleEntityType {
  HUB
  COMMUNITY
}

Table role {
  id integer [pk, increment]
  name varchar [not null, note: 'ADMIN > STEWARD > MODERATOR > MEMBER']
  description text
  is_default bool [not null, note: 'true = platform default, false = community custom']
  entity_id cuid [note: 'NULL for default roles; scoped to a hub/community for custom']
  entity_type RoleEntityType
  creator_id cuid

  checks {
    `is_default = (entity_id IS NULL)` [name: 'chk_role_scope_must_be_entity_linked_if_not_default']
  }
}

Table role_permissions {
  role_id integer [not null]
  permission_id integer [not null]

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table permission {
  id integer [pk, increment]
  name varchar [not null]
  description varchar
}

Ref: user_role.user_id > user.id [delete: cascade]
Ref: user_role.role_id > role.id [delete: cascade]
Ref: role.creator_id > user.id [delete: set null]
Ref: role_permissions.role_id > role.id [delete: cascade]
Ref: role_permissions.permission_id > permission.id [delete: cascade]


// -------------------------------------------------------
// Hubs & Communities
// -------------------------------------------------------

Table hub {
  id cuid [pk]
  type HubType [not null]
  name varchar [not null]
  description text [not null]
  creator_id cuid
  address varchar
  latitude "double precision" [note: 'Agglomerated average; CHECK: BETWEEN -90 AND 90']
  longitude "double precision" [note: 'Agglomerated average; CHECK: BETWEEN -180 AND 180']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum HubType {
  REGISTERED   [note: 'Registered by a known hub steward']
  AGGLOMERATE  [note: 'Auto-created from community geographic clustering']
}

Table hub_communities {
  hub_id cuid [not null]
  community_id cuid [not null]

  indexes {
    (hub_id, community_id) [pk]
  }
}

Table community {
  id cuid [pk]
  name varchar [not null]
  website varchar
  description text [not null]
  tags "text[]"

  contact_firstname varchar [not null]
  contact_lastname varchar [not null]
  contact_email varchar [not null]
  contact_number varchar
  address varchar [not null]
  city varchar [not null]
  province varchar [not null]
  postal_code varchar
  country varchar [not null]

  settings jsonb
  creator_id cuid
  verified_email bool [default: false]
  verified_externally bool [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (city, province) [name: 'idx_community_location']
  }
}

Ref: hub.creator_id > user.id [delete: set null]
Ref: hub_communities.hub_id > hub.id [delete: cascade]
Ref: hub_communities.community_id > community.id [delete: cascade]
Ref: community.creator_id > user.id [delete: set null]


// -------------------------------------------------------
// Community / Public Facing
// -------------------------------------------------------

Table event {
  id cuid [pk]
  community_id cuid [not null]
  creator_id cuid [note: 'Nullable — preserved as null if user deleted']
  announcement_id cuid

  release_status ReleaseStatus [not null]
  event_type EventType
  title varchar [not null]
  subtitle varchar
  description text
  links "text[]"
  tags "text[]"

  location varchar
  starts_at timestamp
  ends_at timestamp [note: 'CHECK: ends_at IS NULL OR ends_at > starts_at']
  ical_url varchar

  recurring RecurrenceSchedule
  recurring_dow "Day[]"

  created_at timestamp [default: `now()`]
  released_at timestamp
  updated_at timestamp [default: `now()`]

  indexes {
    (community_id, release_status, starts_at) [name: 'idx_event_community_feed']
    recurring [name: 'idx_event_recurring']
  }
}

Ref: event.community_id > community.id [delete: cascade]
Ref: event.creator_id > user.id [delete: set null]
Ref: event.announcement_id > announcement.id [delete: set null]

Enum ReleaseStatus {
  DRAFT
  PENDING
  HIDDEN
  PUBLIC
  ARCHIVED
}

Enum EventType {
  SOCIAL
  INFORMATIONAL
}

Enum RecurrenceSchedule {
  DAILY
  WEEKLY
  BIWEEKLY
  MONTHLY
  ANNUAL
}

Enum Day {
  MON
  TUE
  WED
  THU
  FRI
  SAT
  SUN
}

Table announcement {
  id cuid [pk]
  community_id cuid [not null]
  author_id cuid
  release_status ReleaseStatus [not null]

  title varchar [not null]
  subtitle varchar
  description text
  tags "text[]"

  created_at timestamp [default: `now()`]
  released_at timestamp
  updated_at timestamp [default: `now()`]

  likes integer
  views integer

  indexes {
    (community_id, release_status, released_at) [name: 'idx_announcement_community_feed']
  }
}
Ref: announcement.community_id > community.id [delete: cascade]
Ref: announcement.author_id > user.id [delete: set null]


Table comment {
  id integer [pk, increment]
  community_id cuid [not null]
  author_id cuid
  comment_status CommentStatus [not null]
  content text [not null]
  ts timestamp [default: `now()`]
  ts_edited timestamp

  parent_entity_type CommentEntityType [not null]
  parent_entity_id cuid [not null, note: 'No FK — polymorphic ref to announcement.id or event.id']
  parent_comment_id integer [ref: - comment.id]

  indexes {
    (parent_entity_type, parent_entity_id) [name: 'idx_comments_parent']
    parent_comment_id [name: 'idx_comments_thread']
  }

  checks {
    `parent_entity_type IN ('ANNOUNCEMENT','EVENT')` [name: 'chk_valid_comment_parent_entity']
  }
}

Ref: comment.community_id > community.id [delete: cascade]
Ref: comment.author_id > user.id [delete: set null]

Enum CommentEntityType {
  ANNOUNCEMENT
  EVENT
}

Enum CommentStatus {
  PENDING
  APPROVED
  REJECTED
  HIDDEN
  LOCKED
}





// -------------------------------------------------------
// User Facing
// -------------------------------------------------------
// Stores what communities users subscribe to, how they'd like
// to be notified, and at what frequency/channel per content type.

Table subscription {
  id integer [pk, increment]
  user_id cuid [not null]
  community_id cuid [not null]

  is_active bool [not null]
  ts_subscribed timestamp [default: `now()`]
  ts_unsubscribed timestamp [note: 'CHECK: either user is_active or ts_unsubscribed is not NULL']

  calendar_freq CommunicationFrequency
  calendar_preferred_time time [note: 'Stored as HH:MM']
  calendar_channels "CommunicationMethod[]"

  announcement_freq CommunicationFrequency
  announcement_preferred_time time [note: 'Stored as HH:MM']
  announcement_channels "CommunicationMethod[]"

  indexes {
    (user_id, community_id) [unique]
    (community_id, is_active) [name: 'idx_subscription_community']
  }

  checks {
    `is_active OR ts_unsubscribed IS NOT NULL)` [name: 'chk_valid_unsubscribed_ts']
  }

}
Ref: subscription.user_id > user.id [delete: cascade]
Ref: subscription.community_id > community.id [delete: cascade]

Enum CommunicationFrequency {
  NEVER
  REALTIME
  DAILY
  WEEKLY
  BIWEEKLY
  MONTHLY
}

Enum CommunicationMethod {
  EMAIL
  SMS
}

Table user_event {
  id integer [pk, increment]
  user_id cuid [not null]
  event_id cuid [not null]
  rsvp_status RSVPStatus [not null]

  indexes {
    (event_id, rsvp_status) [name: 'idx_user_events_event']
  }
}

Enum RSVPStatus {
  GOING
  INTERESTED
  NOT_GOING
}

Ref: user_event.user_id > user.id [delete: cascade]
Ref: user_event.event_id > event.id [delete: cascade]


// -------------------------------------------------------
// Job Queue
// -------------------------------------------------------
// All background work — notifications, digests, scrapers — flows
// through this table. No inter-service HTTP calls; this is the
// contract between the scheduler and the executioner.
//
// State machine:
//   SCHEDULED → PENDING → READY → RUNNING → COMPLETE
//                                          ↘ FAILED (retry if count < max)

Table job_queue {
  id cuid [pk]
  status JobStatus [not null, default: 'SCHEDULED']
  service_name varchar [not null, note: 'Handler key in apps/executioner/handlers/index.ts']
  created_at timestamp [default: `now()`]
  fire_at timestamp [not null]
  started_at timestamp
  completed_at timestamp
  payload jsonb [not null, note: 'User IDs, entity refs, or any loose job data']
  max_retries integer [default: 3]
  retry_count integer [default: 0]
  error_message text

  indexes {
    (status, fire_at) [name: 'idx_job_queue_status_fire']
  }
}

Enum JobStatus {
  SCHEDULED  [note: 'Fires more than 24h from now']
  PENDING    [note: 'Fires within the next 24h — scheduler watching']
  READY      [note: 'Past fireAt — awaiting executioner pickup']
  RUNNING    [note: 'Executioner has claimed this job']
  COMPLETE   [note: 'Finished successfully']
  FAILED     [note: 'Exhausted all retries']
}
